--- a/templates/accounts/custDashboard.html
+++ b/templates/accounts/custDashboard.html
@@ -1,11 +1,128 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
-
-<h4>Welcome {{user.username}}</h4>
-<p>This is a {{user.get_role}}</p>
 {% include 'includes/alerts.html' %}
+
+<!-- Main Section Start -->
+<div class="main-section">
+    <div class="page-section restaurant-detail-image-section" style=" background: url({% static 'extra-images/cover-photo01.jpg' %}) no-repeat scroll 0 0 / cover;">
+        <!-- Container Start -->
+        <div class="container">
+            <!-- Row Start -->
+            <div class="row">
+                <!-- Column Start -->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="company-info-detail">
+                        <div class="company-info">
+                            <div class="img-holder">
+                                <figure>
+                                    <img src="{% static 'extra-images/listing-logo18.png' %}" alt="">
+                                </figure>
+                            </div>
+
+                            <div class="text-holder">
+                                <span class="restaurant-title">Rathan Kumar</span>
+                                <div class="text">
+                                    <i class="icon-location"></i>
+                                    <p>+91-1234568965</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Column End -->
+            </div>
+            <!-- Row End -->
+        </div>
+        <!-- Container End -->
+    </div>
+    <div class="page-section account-header buyer-logged-in">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <!-- Load the sidebar here -->
+                    {% include 'includes/c_sidebar.html' %}
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <div class="user-dashboard loader-holder">
+                        <div class="user-holder">
+                            
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="row">
+                                    <div class="element-title has-border right-filters-row">
+                                        <h5>Recent Orders</h5>
+                                        <div class="right-filters row pull-right">
+                                            <div class="col-lg-6 col-md-6 col-xs-6">
+                                                <div class="input-field">
+                                                    <select class="chosen-select-no-single">
+                                                        <option selected="selected" value="">Select Orders Status</option>
+                                                        <option value="Processing">Processing</option>
+                                                        <option value="Cancelled">Cancelled</option>
+                                                        <option value="Completed">Completed</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <div class="user-orders-list">
+                                        <div class="responsive-table">
+                                            <ul class="table-generic">
+                                                <li class="order-heading-titles">
+                                                    <div>Order id</div>
+                                                    <div>Date</div>
+                                                    <div>Total Price</div>
+                                                    <div>Charges</div>
+                                                    <div>Received</div>
+                                                    <div>Status</div>
+                                                </li>
+                                                <li class="order-heading-titles">
+                                                    <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
+                                                    <div>Apr 9,2020</div>
+                                                    <div>£ 38.99</div>
+                                                    <div>£ 3.90</div>
+                                                    <div>£ 35.09</div>
+                                                    <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
+                                                </li>
+                                                
+                                                
+                                                
+                                                <li class="order-heading-titles">
+                                                    <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
+                                                    <div>Apr 9,2020</div>
+                                                    <div>£ 26.22</div>
+                                                    <div>£ 2.62</div>
+                                                    <div>£ 23.60</div>
+                                                    <div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
+                                                </li>
+                                                <li class="order-heading-titles">
+                                                    <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
+                                                    <div>Apr 2,2020</div>
+                                                    <div>£ 28.24</div>
+                                                    <div>£ 2.82</div>
+                                                    <div>£ 25.42</div>
+                                                    <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
+                                                </li>
+                                            </ul>
+
+                                        </div>												
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Main Section End -->
 
 
 {% endblock %}
